--- a/src/app/dashboard/profile/profile.component.css
+++ b/src/app/dashboard/profile/profile.component.css
@@ -1,9 +1,17 @@
+img {
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
+    margin-top: 8px;
+    margin-left: 130px;
+}
+
 section {
-    /* background-color: #1ecefd; */
+    background-color: rgb(243, 245, 247);
     display: flex;
     flex-direction: column;
-    width: 400px;
-    height: 550px;
+    width: 350px;
+    height: 520px;
     border-radius: 15px;
     box-shadow: 0px 0px 10px 0px rgba(204, 204, 204, 1);
     padding: 14px;
@@ -20,26 +28,36 @@ i {
 
 .profile-text {
     background-color: white;
-    width: 400px;
+    width: 320px;
+    margin-left: 10px;
 }
 
-h1 {
-    font-weight: 900;
+h3 {
+    font-weight: 700;
+    margin-left: 10px;
+}
+
+p {
+    margin-left: 10px;
 }
 
 .email {
     color: black;
     font-weight: 700;
+    margin-left: 10px;
 }
 
 button {
+    margin-left: 100px;
+    border-radius: 15px;
+    width: 150px;
     background-color: #637c33;
     color: white;
     padding: 14px;
     border-radius: 14px;
     font-weight: 700;
     border: none;
-    width: 100%;
+    flex-direction: center;
 }
 
 button:hover {
